Added the rudiments of networking!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.0"
-sdl2 = "0.35.0"
+rand = "0.8"
+sdl2 = "0.35"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3"
