--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 rand = "0.8"
+rand_xoshiro = "0.6"
 sdl2 = "0.35"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3"
