--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 [dependencies]
 rand = "0.8"
 rand_xoshiro = "0.6"
-sdl2 = "0.35"
+sdl2 = { version = "0.35", features = ["image", "ttf", "mixer"] }
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3"
 bus = "2.2"
